Fix displaying of package table elements header and footer on mobile devices

--- a/src/modules/Builder/components/PackageList/components/PackagesTable/styles.scss
+++ b/src/modules/Builder/components/PackageList/components/PackagesTable/styles.scss
@@ -1,5 +1,6 @@
 .card-title .form-group {
-    margin: 0 5px;
+    margin-bottom: 0;
+    margin-right: 5px;
     display: inline-block;
 }
 @media screen and (max-width:750px){
